# src/versions/v1/routes/matches.js
@@ -3,5 +3,6 @@ const router = Router();
 const matchesController = require("../../../controllers/matchesController");
 
 router.get("/", matchesController.getMatches);
+router.get("/:id", matchesController.getMatchById);
 
 module.exports = router;
